# rainier

./: .env.example  .gitignore  CLAUDE.md  README.md  TODOS.md  docker-compose.yaml  pyproject.toml
.github/workflows/: pages.yml
config/: cron.yaml  settings.yaml
config/prompts/: default_analysis.md
config/watchlists/: default.yaml
docs/: market_notes.md  stock_screener_design.md  tqqq_strategy_demo.html  tqqq_top20_all_combos.html
reports/: pf_btest_20260331_stop11pct_close.md  pf_btest_20260331_stop11pct_close_trades.csv  pf_btest_20260331_stop11pct_stoplimit.md  pf_btest_20260331_stop11pct_stoplimit_trades.csv  pf_btest_20260331_stop15pct_close.md  pf_btest_20260331_stop15pct_close_trades.csv  pf_btest_20260331_stop15pct_stoplimit.md  pf_btest_20260331_stop15pct_stoplimit_trades.csv  pf_btest_20260331_stop5pct_close.md  pf_btest_20260331_stop5pct_close_trades.csv  pf_btest_20260331_stop5pct_stoplimit.md  pf_btest_20260331_stop5pct_stoplimit_trades.csv  pf_btest_20260331_stop7pct_close.md  pf_btest_20260331_stop7pct_close_trades.csv  pf_btest_20260331_stop7pct_stoplimit.md  pf_btest_20260331_stop7pct_stoplimit_trades.csv  pf_btest_20260331_stop9pct_close.md  pf_btest_20260331_stop9pct_close_trades.csv  pf_btest_20260331_stop9pct_stoplimit.md  pf_btest_20260331_stop9pct_stoplimit_trades.csv  tqqq_strategy_demo.html  tqqq_strategy_report.xlsx
scripts/: backtest_tqqq_demo_report.py  backtest_tqqq_ema.py  backtest_tqqq_excel.py  backtest_tqqq_full_report.py  backtest_tqqq_sweep.py  cron-wrapper.sh  ensure-chrome.sh
src/quant/: cli.py
src/quant/analysis/: analyzer.py  pinbar.py  pivots.py
src/quant/core/: config.py  database.py  models.py  types.py
src/quant/data/: csv_provider.py  ingest.py  provider.py
src/quant/signals/: generator.py
src/quant/viz/: charts.py
src/rainier/: cli.py
src/rainier/alerts/: discord.py
src/rainier/analysis/: analyzer.py  (+12 more)
tests/: test_backtest.py  test_extractor.py  test_feature_store.py  test_generator.py  test_hmm_regime.py  test_inside_bar.py  test_labels.py  test_pattern_emitter.py  test_pattern_primitives.py  test_pattern_scorer.py  test_pinbar.py  test_pivots.py  test_portfolio.py  test_regime.py  test_risk.py  test_scorer.py  test_scorers.py  test_sr_diagonal.py  test_sr_horizontal.py  test_stock_patterns.py
tests/test_alerts/: test_discord.py
tests/test_monitors/: test_types.py
tests/test_notifications/: test_notifier.py
tests/test_scheduler/: test_scheduler.py
tests/test_scrapers/: test_browser.py  test_parsers.py
(+47 files in other folders)
