[project]
name = "quant"
version = "0.1.0"
description = "Price action auto-trading system — S/R detection, pin bar scanning, signal generation"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
    "pandas>=2.2",
    "numpy>=1.26",
    "plotly>=5.18",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "kaleido==0.2.1",
    "yfinance>=1.2.0",
]

[project.scripts]
quant = "quant.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/quant"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.3",
]
